AB#1409 correspond en.json+references with changes

--- a/interfaces/HO-Portal/src/app/app.component.html
+++ b/interfaces/HO-Portal/src/app/app.component.html
@@ -47,7 +47,7 @@
             >
               <ion-icon slot="start" name="list"></ion-icon>
               <ion-label>
-                {{ 'page.programs.program-list.pageTitle'|translate }}
+                {{ 'page.programs-list.pageTitle'|translate }}
               </ion-label>
             </ion-item>
             <ion-item routerLink="/help"
