--- a/interfaces/HO-Portal/src/app/help/help.page.html
+++ b/interfaces/HO-Portal/src/app/help/help.page.html
@@ -17,11 +17,11 @@
     <p>{{ 'page.help.create-program-content1'|translate }}</p>
     <p>{{ 'page.help.create-program-content2'|translate }}</p>
     <ul>
-      <li><strong>{{'page.programs.program-details.distributionFrequency'|translate}}:</strong> {{'page.help.create-program-distributionFrequency'|translate}}</li>
-      <li><strong>{{'page.programs.program-details.fixedTransferValue'|translate}}:</strong> {{'page.help.create-program-fixedTransferValue'|translate}}</li>
-      <li><strong>{{'page.programs.program-details.inclusionCalculationType'|translate}}:</strong> {{'page.help.create-program-inclusionCalculationType'|translate}}</li>
-      <li><strong>{{'page.programs.program-details.description'|translate}}:</strong> {{'page.help.create-program-description'|translate}}</li>
-      <li><strong>{{'page.programs.program-details.descCashType'|translate}}:</strong> {{'page.help.create-program-descCashType'|translate}}</li>
+      <li><strong>{{'page.program.program-details.distributionFrequency'|translate}}:</strong> {{'page.help.create-program-distributionFrequency'|translate}}</li>
+      <li><strong>{{'page.program.program-details.fixedTransferValue'|translate}}:</strong> {{'page.help.create-program-fixedTransferValue'|translate}}</li>
+      <li><strong>{{'page.program.program-details.inclusionCalculationType'|translate}}:</strong> {{'page.help.create-program-inclusionCalculationType'|translate}}</li>
+      <li><strong>{{'page.program.program-details.description'|translate}}:</strong> {{'page.help.create-program-description'|translate}}</li>
+      <li><strong>{{'page.program.program-details.descCashType'|translate}}:</strong> {{'page.help.create-program-descCashType'|translate}}</li>
     </ul>
   </div>
   
