--- a/interfaces/HO-Portal/src/app/program/program-json/program-json.component.html
+++ b/interfaces/HO-Portal/src/app/program/program-json/program-json.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>{{'page.programs.program-modal.pageTitle' | translate}}</ion-title>
+    <ion-title>{{'page.program.program-modal.pageTitle' | translate}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
