--- a/interfaces/HO-Portal/src/app/programs-list/programs-list.component.html
+++ b/interfaces/HO-Portal/src/app/programs-list/programs-list.component.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      {{ 'page.programs.program-list.pageTitle'|translate }}
+      {{ 'page.programs-list.pageTitle'|translate }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -14,7 +14,7 @@
        class="ion-padding ion-text-center"
   >
     <ion-icon name="sad" size="large"></ion-icon><br>
-    {{ 'page.programs.program-list.not-available'|translate }}
+    {{ 'page.programs-list.not-available'|translate }}
   </div>
   <ion-list *ngIf="items"
             class="ion-padding"
