--- a/interfaces/HO-Portal/src/app/program/program-details/program-details.component.html
+++ b/interfaces/HO-Portal/src/app/program/program-details/program-details.component.html
@@ -1,10 +1,10 @@
 <section *ngIf="componentVisible">
-  <h2>{{ 'page.programs.program-details.section-details'|translate }}</h2>
+  <h2>{{ 'page.program.program-details.section-details'|translate }}</h2>
 
   <ion-list lines="full">
     <ion-item>
       <ion-button (click)="openProgramJson()">
-        {{ 'page.programs.program-details.all'|translate }}
+        {{ 'page.program.program-details.all'|translate }}
       </ion-button>
     </ion-item>
     <ion-item *ngFor="let item of programArray">
