--- a/interfaces/HO-Portal/src/app/program/program-payout/program-payout.component.html
+++ b/interfaces/HO-Portal/src/app/program/program-payout/program-payout.component.html
@@ -1,16 +1,16 @@
 <section *ngIf="componentVisible">
-  <h2>{{ 'page.programs.program-details.section-payout'|translate }}</h2>
+  <h2>{{ 'page.program.program-details.section-payout'|translate }}</h2>
   
   <form>
     <ion-item *ngFor="let installment of installments">
       <ion-row class="ion-align-items-center">
         <p>
-          {{ 'page.programs.program-payout.installment-nr'|translate }} {{installment.id}}
+          {{ 'page.program.program-payout.installment-nr'|translate }} {{installment.id}}
           <ion-label *ngIf="installment.statusOpen" position="stacked">
-            {{ 'page.programs.program-payout.open'|translate }}
+            {{ 'page.program.program-payout.open'|translate }}
           </ion-label>
           <ion-label *ngIf="!installment.statusOpen" position="stacked">
-            {{ 'page.programs.program-payout.closed'|translate }}
+            {{ 'page.program.program-payout.closed'|translate }}
           </ion-label>
           <ion-label position="stacked">
             {{ installment.installmentDate|date:"dd-MM-y" }}
@@ -18,7 +18,7 @@
         </p>
         <ion-item class="ion-margin-end" [disabled]="!installment.firstOpen || totalIncluded === 0 || currentUserRole !== userRoleEnum.ProgramManager">
           <ion-label position="stacked">
-            {{ 'page.programs.program-details.fixedTransferValue'|translate }}
+            {{ 'page.program.program-details.fixedTransferValue'|translate }}
           </ion-label>
           <ion-input type="number"
                     inputmode="decimal"
@@ -35,23 +35,23 @@
           <confirm-prompt [disabled]="!isEnabled || !installment.firstOpen || totalIncluded === 0 || currentUserRole !== userRoleEnum.ProgramManager"
                           (confirm)="performPayout(installment); installment.isInProgress = true"
                           (cancel)="cancelPayout(installment)"
-                          [subHeader]="'page.programs.program-payout.total-amount'|translate"
+                          [subHeader]="'page.program.program-payout.total-amount'|translate"
                           [message]="confirmMessage"
           >
-            {{ 'page.programs.program-payout.start-payout'|translate }}
+            {{ 'page.program.program-payout.start-payout'|translate }}
           </confirm-prompt>
           <ion-label 
             *ngIf="totalIncluded === 0 && installment.firstOpen"
             position="stacked"
           >
-            {{ 'page.programs.program-payout.none-included'|translate }}
+            {{ 'page.program.program-payout.none-included'|translate }}
           </ion-label>
         </p>
         <p>
           <ion-button [disabled]="currentUserRole !== userRoleEnum.PrivacyOfficer"
                       (click)="exportList(installment)"
           >
-            {{ 'page.programs.program-payout.export-list'|translate }}
+            {{ 'page.program.program-payout.export-list'|translate }}
           </ion-button>
 
         </p>
