--- a/interfaces/HO-Portal/src/app/programs/program-payout/program-payout.component.html
+++ b/interfaces/HO-Portal/src/app/programs/program-payout/program-payout.component.html
@@ -27,7 +27,7 @@
                    (change)="updateTotalAmountMessage(installment)"
         ></ion-input>
       </ion-item>
-  
+
       <p>
         <confirm-prompt [disabled]="!isEnabled || !installment.firstOpen || totalIncluded === 0 || currentUserRole !== userRoleEnum.ProgramManager"
                         (confirm)="performPayout(installment); installment.isInProgress = true"
@@ -37,7 +37,7 @@
         >
           {{ 'page.programs.program-payout.start-payout'|translate }}
         </confirm-prompt>
-        <ion-label 
+        <ion-label
           *ngIf="totalIncluded === 0 && installment.firstOpen"
           position="stacked"
         >
@@ -45,14 +45,13 @@
         </ion-label>
       </p>
       <p>
-        <ion-button [disabled]="currentUserRole !== userRoleEnum.PrivacyOfficer"
-                    (click)="exportList(installment)"
-        >
+        <ion-button [disabled]="currentUserRole !== userRoleEnum.PrivacyOfficer || !installment.isExportAvailable"
+          (click)="exportList(installment)">
           {{ 'page.programs.program-payout.export-list'|translate }}
         </ion-button>
 
       </p>
-  
+
       <ion-spinner *ngIf="installment.isInProgress"
                    color="primary"
                    class="ion-margin-start"
