AB#1454 move programs-list to home

--- a/interfaces/HO-Portal/src/app/home/home.page.html
+++ b/interfaces/HO-Portal/src/app/home/home.page.html
@@ -9,5 +9,6 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
+  <app-programs-list></app-programs-list>
 </ion-content>
