--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -6,7 +6,7 @@
                   fill="clear"
                   shape="round"
                   size="large"
-                  routerLink="/programs"
+                  routerLink="/home"
                   routerDirection="back"
       >
         <ion-icon name="arrow-back"></ion-icon>
