--- a/interfaces/HO-Portal/src/app/programs-list/programs-list.component.html
+++ b/interfaces/HO-Portal/src/app/programs-list/programs-list.component.html
@@ -1,23 +1,14 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>
-      {{ 'page.programs-list.pageTitle'|translate }}
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
+<section>
+  <h2 >
+    {{ 'page.programs-list.pageTitle'|translate }}
+  </h2>
   <div *ngIf="!items"
-       class="ion-padding ion-text-center"
+       class="ion-text-center"
   >
     <ion-icon name="sad" size="large"></ion-icon><br>
     {{ 'page.programs-list.not-available'|translate }}
   </div>
   <ion-list *ngIf="items"
-            class="ion-padding"
   >
     <ion-item *ngFor="let program of items"
               detail="true"
@@ -37,4 +28,4 @@
       </ion-label>
     </ion-item>
   </ion-list>
-</ion-content>
+</section>
