AB#1455 main-menu always in collapsed mode

--- a/interfaces/HO-Portal/src/app/app.component.html
+++ b/interfaces/HO-Portal/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ion-app>
-  <ion-split-pane contentId="main">
+  <ion-split-pane contentId="main" when="(min-width:5000px)">
     <ion-menu contentId="main">
       <ion-header>
         <ion-toolbar>
