Use phone-number-validation component in Q&A-set
Related AB#1473

--- a/interfaces/PA-App/src/app/personal-components/set-notification-number/set-notification-number.component.html
+++ b/interfaces/PA-App/src/app/personal-components/set-notification-number/set-notification-number.component.html
@@ -53,7 +53,7 @@
                  [isSpoken]="hasValidationError"
   >
     <p>
-      {{ 'personal.set-notification-number.validation-error'|translate }}
+      {{ 'validation.phoneNumber'|translate }}
     </p>
   </dialogue-turn>
   <dialogue-turn [actor]="ngo"
