AB#1493 move createPhases to program.component

--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -16,7 +16,7 @@
       {{ programTitle }}
     </ion-title>
     <ion-buttons slot="end">
-      <app-phase-navigation [activePhase]="activePhase"
+      <app-phase-navigation [programPhases]="programPhases"
                             (emitSelectedPhase)="emitSelectedPhase($event)"
                             (emitProgramPhases)="emitProgramPhases($event)"
       ></app-phase-navigation>
