--- a/interfaces/HO-Portal/src/app/app.component.html
+++ b/interfaces/HO-Portal/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ion-app>
-  <ion-split-pane contentId="main" when="(min-width:5000px)">
+  <ion-split-pane contentId="main" when="true">
     <ion-menu contentId="main">
       <ion-header>
         <ion-toolbar>
