--- a/interfaces/HO-Portal/src/app/program/phase-next/phase-next.component.html
+++ b/interfaces/HO-Portal/src/app/program/phase-next/phase-next.component.html
@@ -1,6 +1,6 @@
   <ion-button *ngIf="btnAvailable"
               [disabled]="selectedPhase !== activePhase"
-              (click)="advancePhase(activePhaseId + 1)"
+              (click)="advancePhase(activePhaseId)"
               [innerHTML]="btnText"
               class="nextStateButton"
   ></ion-button>
