Allow more different characters in phone-numbers
Related AB#1307
Related AB#1447

--- a/interfaces/PA-App/src/app/shared/phone-number-input/phone-number-input.component.html
+++ b/interfaces/PA-App/src/app/shared/phone-number-input/phone-number-input.component.html
@@ -2,7 +2,7 @@
            type="tel"
            inputmode="tel"
            autocomplete="tel"
-           pattern="^\+?[0-9 ]+"
+           pattern="^\+?[0-9 \-\(\)]+"
            placeholder="+0 000 000 000"
            minlength="8"
            maxlength="17"
