Fix too eager validation-checks on the server
Related AB#1497

--- a/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -51,7 +51,7 @@
                           [value]="answers[question.code]?.value"
                           ngDefaultControl
                           [disabled]="isSubmitted"
-                          (ionChange)="onChangeWithValidation(question.code, telInput.value, telInput.checkValidity())"
+                          (isValidChange)="onChangeWithValidation(question.code, telInput.value, telInput.isValid)"
                           debounce="500"
       ></phone-number-input>
     </div>
