Rename custom-component to be different from input-element used INSIDE that component

--- a/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -47,11 +47,11 @@
       ></ion-input>
     </div>
     <div *ngSwitchCase="answerType.phoneNumber">
-      <phone-number-input #telInput
+      <phone-number-input #phoneNumberInput
                           [value]="answers[question.code]?.value"
                           ngDefaultControl
                           [disabled]="isSubmitted"
-                          (isValidChange)="onChangeWithValidation(question.code, telInput.value, telInput.isValid)"
+                          (isValidChange)="onChangeWithValidation(question.code, phoneNumberInput.value, phoneNumberInput.isValid)"
                           debounce="500"
       ></phone-number-input>
     </div>
