Communicate active/selected state also via indicator/fill-style
Related AB#1517

--- a/interfaces/HO-Portal/src/app/program/phase-navigation/phase-navigation.component.html
+++ b/interfaces/HO-Portal/src/app/program/phase-navigation/phase-navigation.component.html
@@ -1,8 +1,14 @@
-<ion-button *ngFor="let phase of programPhases"
-            [color]="phase.active ? 'primary' : 'null'"
-            [class.selected]="phase.id === selectedPhaseId"
-            [disabled]="phase.id > activePhaseId"
-            (click)="changePhase(phase.id)"
+<span *ngFor="let phase of programPhases"
+      class="phase-navigation"
 >
-  {{ phase.label }}
-</ion-button>
+  <ion-button [color]="getColor(phase)"
+              [fill]="getFill(phase)"
+              [disabled]="(phase.id > activePhaseId)"
+              (click)="changePhase(phase.id)"
+  >
+    {{ phase.label }}
+  </ion-button>
+  <span *ngIf="(phase.id === selectedPhaseId)"
+        class="phase-navigation--indicator"
+  ></span>
+</span>
