Created some sound tests to check our options AB#1482

--- a/interfaces/PA-App/src/app/personal/personal.page.html
+++ b/interfaces/PA-App/src/app/personal/personal.page.html
@@ -78,6 +78,10 @@
       <ion-icon name="cloud-download" size="small" slot="icon-only"></ion-icon>
     </ion-button>
 
+    <ion-button color="tertiary" size="small" fill="clear" title="Play audio" (click)="playAudio()">
+      <ion-icon name="musical-note" size="small" slot="icon-only"></ion-icon>
+    </ion-button>
+
   </ion-row>
 </div>
 
