AB#1531 copy inclusion-ready-logic to payment

--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -42,6 +42,7 @@
   <app-program-payout [selectedPhase]="selectedPhase"
                       [programId]="program?.id"
                       [currencyCode]="program?.currency"
+                      (emitCompleted)="emitCompleted($event)"
   ></app-program-payout>
 
   <app-program-funds [selectedPhase]="selectedPhase"
